# Gurungi

./: .gitignore  CMakeLists.txt  Helloworld.gu  Makefile  README.md
src/: Gurungi.cpp  Gurungi.hpp
src/arg_parser/: arg_parser.cpp  arg_parser.hpp
src/executor/: executor.cpp  executor.hpp
src/gmethods/: gwrappers.cpp
src/gtypes/: gtypes.cpp  gtypes.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/parser/: parser.cpp  parser.hpp
src/static_code_analysis/: analysis.hpp
src/types/: gtypes.cpp  gtypes.hpp
src/utils/: errors.cpp  errors.hpp  gwrappers.cpp  gwrappers.hpp
